--- a/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/AutorizarJefeDirecto.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/AutorizarJefeDirecto.cshtml
@@ -411,8 +411,8 @@
                                             Importe
                                         </th>
                                         @*<th>
-                            Descuento
-                        </th>*@
+                        Descuento
+                    </th>*@
                                         <th>
                                             % IVA
                                         </th>
@@ -432,8 +432,8 @@
                                             Total IEPS
                                         </th>
                                         @*<th>
-                            Total Translados
-                        </th>*@
+                        Total Translados
+                    </th>*@
                                         <th>
                                             Total Retenciones
                                         </th>
@@ -442,6 +442,9 @@
                                         </th>
                                         <th>
                                             Total
+                                        </th>
+                                        <th>
+                                            Total CC
                                         </th>
                                         <th>Total MXN</th>
                                         <th nowrap>
@@ -484,6 +487,7 @@
                                                     <td></td>
                                                     <td></td>
                                                     <td></td>
+                                                    <td></td>
                                                     <td>
                                                         <i>@Html.DisplayFor(model => concepto.comentario)</i>
                                                     </td>
@@ -518,6 +522,21 @@
                                                     <td nowrap style="color:#C10000; text-align:right">@(concepto.total_retenciones.HasValue ? concepto.total_retenciones.Value.ToString("$ #,##0.00") : "--")</td>
                                                     <td></td>
                                                     <td nowrap style="text-align:right">@(concepto.total_mxn.HasValue ? concepto.total_mxn.Value.ToString("$ #,##0.00") : "--")</td>
+                                                    <td colspan="3"></td>
+                                                </tr>
+                                                break;
+                                            case Bitacoras.Util.GV_comprobacion_origen.COFIDI_CONCEPTO_CC:
+                                            case Bitacoras.Util.GV_comprobacion_origen.XML_CONCEPTO_CC:
+                                                <tr style="background-color:#C9DCC1" class="div_@concepto.uuid">
+                                                    <td colspan="9"></td>
+                                                    <td colspan="9" style="text-align: right; font-style: italic;" nowrap>
+                                                        @Html.DisplayFor(model => Model.GV_comprobacion_rel_gastos.FirstOrDefault(x => x.num_cc == concepto.num_cc
+                                                                            && concepto.uuid == x.uuid
+                                                                            && (x.concepto_tipo == Bitacoras.Util.GV_comprobacion_origen.COFIDI_CONCEPTO || x.concepto_tipo == Bitacoras.Util.GV_comprobacion_origen.XML_CONCEPTO)).GV_centros_costo.ConcatCentroDeptoPlanta)
+                                                    </td>
+                                                    <td colspan="1" style="text-align:right" nowrap>
+                                                        @(concepto.importe_cc.HasValue ? concepto.importe_cc.Value.ToString("$ #,##0.00") : "--")
+                                                    </td>
                                                     <td colspan="2"></td>
                                                 </tr>
                                                 break;
@@ -536,6 +555,13 @@
                                                     <td nowrap style="color:#C10000; text-align:right">@(concepto.total_retenciones.HasValue ? concepto.total_retenciones.Value.ToString("$ #,##0.00") : "--")</td>
                                                     <td nowrap style="text-align:right">@(concepto.impuestos_locales.HasValue ? concepto.impuestos_locales.Value.ToString("$ #,##0.00") : "--")</td>
                                                     <td nowrap style="text-align:right">@(concepto.total_mxn.HasValue ? concepto.total_mxn.Value.ToString("$ #,##0.00") : "--")</td>
+                                                    <td colspan="1" id="suma-cc-@concepto.uuid" style="text-align:right; font-weight:bold;">
+                                                        @(Model.GV_comprobacion_rel_gastos.Where(x=>
+                                                                (x.concepto_tipo == Bitacoras.Util.GV_comprobacion_origen.COFIDI_CONCEPTO_CC
+                                                                || x.concepto_tipo == Bitacoras.Util.GV_comprobacion_origen.XML_CONCEPTO_CC)
+                                                                && x.uuid == concepto.uuid
+                                                                ).Sum(x=>x.importe_cc).Value.ToString("$ #,##0.00"))
+                                                    </td>
                                                     <td nowrap class="item-total-mxn" style="text-align:right; font-weight:bold">@(concepto.total_mxn.HasValue ? concepto.total_mxn.Value.ToString("$ #,##0.00") : "--")</td>
                                                     <td colspan="1"></td>
                                                 </tr>
@@ -568,6 +594,7 @@
                                                     <td></td>
                                                     <td></td>
                                                     <td></td>
+                                                    <td></td>
                                                     <td>
                                                         <i>@Html.DisplayFor(model => concepto.comentario)</i>
                                                     </td>
@@ -588,6 +615,7 @@
                                                         <b>Importe:</b> <br /> <importe id="GV_comprobacion_rel_gastos[@contador].importe">$ @Html.DisplayFor(model => concepto.importe)</importe>
                                                     </td>
                                                     <td colspan="6"></td>
+                                                    <td colspan="1"></td>
                                                     <td colspan="1"></td>
                                                     <td colspan="1" class="item-total-mxn" id="total-mxn_@contador" style="font-weight: bold; text-align: right;"></td>
                                                     <td colspan="1"></td>
@@ -617,6 +645,7 @@
                                                     <td></td>
                                                     <td></td>
                                                     <td></td>
+                                                    <td></td>
                                                     <td>
                                                         <i>@Html.DisplayFor(model => concepto.comentario)</i>
                                                     </td>
@@ -638,6 +667,7 @@
                                                     </td>
                                                     <td colspan="6"></td>
                                                     <td colspan="1"></td>
+                                                    <td colspan="1"></td>
                                                     <td colspan="1" class="item-total-mxn" id="total-mxn_@contador" style="font-weight: bold; text-align: right;"></td>
                                                     <td colspan="1"></td>
                                                 </tr>
@@ -649,17 +679,17 @@
                                 </tbody>
                                 <tfoot>
                                     <tr>
-                                        <th colspan="18" style="text-align:right">Total MXN</th>
+                                        <th colspan="19" style="text-align:right">Total MXN</th>
                                         <th id="total_gastos_mxn" style="text-align:right" nowrap>$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.sumaGastosNacional)</th>
                                         <th colspan="1"></th>
                                     </tr>
                                     <tr>
-                                        <th colspan="18" style="text-align:right">ANTICIPO</th>
+                                        <th colspan="19" style="text-align:right">ANTICIPO</th>
                                         <th id="anticipo_mxn" style="text-align:right" nowrap>$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.sumaGastosNacional)</th>
                                         <th colspan="1"></th>
                                     </tr>
                                     <tr>
-                                        <th colspan="18" style="text-align:right">SALDO POR COMPROBAR</th>
+                                        <th colspan="19" style="text-align:right">SALDO POR COMPROBAR</th>
                                         <th id="saldo_por_comprobar_mxn" style="text-align:right" nowrap>$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.sumaGastosNacional)</th>
                                         <th colspan="1"></th>
                                     </tr>
@@ -987,6 +1017,13 @@ function CalculaTotales() {
     //calcula el valor por comprobar
     let anticipoMXN = CurrencyToFloat($("#anticipo_mxn").html());
     let porComprobarMXN = anticipoMXN - totalMXN;
+    // muestra la cantidad por comprobar
+    if (porComprobarMXN >= 0) {
+        $("#saldo_por_comprobar_mxn").css('color', '#00DD00')
+    } else {
+        $("#saldo_por_comprobar_mxn").css('color', '#EE0000')
+    }
+
     // muestra la cantidad por comprobar
     $("#saldo_por_comprobar_mxn").html(FloatToCurrency(porComprobarMXN));
 
