2023-01-07 cambio en web confing

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -336,8 +336,8 @@
                                                     </li>
                                                 }
 
-                                                <h3>MANUAL DE USUARIO</h3>
-                                                <li class="@(ViewBag.SegundoNivel == "GV_manual_usuario" ? "current-page" : null )"><a href="@Url.Action( "Manual", "GV_solicitud")">Manual de Usuario</a></li>
+                                                @*<h3>MANUAL DE USUARIO</h3>*@
+                                               @* <li class="@(ViewBag.SegundoNivel == "GV_manual_usuario" ? "current-page" : null )"><a href="@Url.Action( "Manual", "GV_solicitud")">Manual de Usuario</a></li>*@
                                             </ul>
                                         </li>
 
@@ -395,8 +395,8 @@
                                                         </ul>
                                                     </li>
                                                 }
-                                                <h3>MANUAL DE USUARIO</h3>
-                                                <li class="@(ViewBag.SegundoNivel == "GV_manual_usuario" ? "current-page" : null )"><a href="@Url.Action( "Manual", "GV_comprobacion")">Manual de Usuario</a></li>
+                                                @*<h3>MANUAL DE USUARIO</h3>*@
+                                                @*<li class="@(ViewBag.SegundoNivel == "GV_manual_usuario" ? "current-page" : null )"><a href="@Url.Action( "Manual", "GV_comprobacion")">Manual de Usuario</a></li>*@
                                             </ul>
                                         </li>
                                     }
