--- a/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/AutorizarNomina.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/AutorizarNomina.cshtml
@@ -687,7 +687,7 @@
                                         <th colspan="1"></th>
                                     </tr>
                                     <tr>
-                                        <th colspan="19" style="text-align:right">SALDO POR COMPROBAR</th>
+                                        <th colspan="19" style="text-align:right">SALDO POR COMPROBAR (A FAVOR)</th>
                                         <th id="saldo_por_comprobar_mxn" style="text-align:right" nowrap>$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.sumaGastosNacional)</th>
                                         <th colspan="1"></th>
                                     </tr>
