--- a/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/Edit.cshtml
@@ -937,7 +937,7 @@
                                             <th colspan="2"></th>
                                         </tr>
                                         <tr>
-                                            <th colspan="19" style="text-align:right">SALDO POR COMPROBAR</th>
+                                            <th colspan="19" style="text-align:right">SALDO POR COMPROBAR (A FAVOR)</th>
                                             <th id="saldo_por_comprobar_mxn" style="text-align:right" nowrap>$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.sumaGastosNacional)</th>
                                             <th colspan="2"></th>
                                         </tr>
